fix layout issue

--- a/src/assets/scss/email2.scss
+++ b/src/assets/scss/email2.scss
@@ -10,8 +10,8 @@ body {
 .background-img {
   position: fixed;
   z-index: -1;
-  right: 0;
-  bottom: 0;
+  right: 0px;
+  bottom: 0px;
 }
 
 h1 {
@@ -51,7 +51,7 @@ a {
 
   .img-connect {
     margin-top: 65px;
-    width: 80%;
+    width: 65%;
   }
 
   .sub-title-description {
@@ -85,6 +85,22 @@ a {
   .logo {
     margin-top: 30px;
     width: 300px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 50px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  .container {
+    margin: 0px auto;
+    margin-top: 0px;
+    width: 100vw;
   }
 }
 
